# probatio-check

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
probatio/: acquire.py  acquire_cli.py  check.py  check_cli.py  check_retrieval.py  config.py  gather.py  highlight.py  interfaces.py  llm.py  manuscript.py  manuscript_layout.py  models.py  report.py  resolve.py  verify_citations.py
probatio/web/: app.py  serve.py
probatio/web/static/: app.css  app.js  index.html
tests/: conftest.py  fakes.py  test_acquire.py  test_check_cli.py  test_check_config.py  test_check_locality.py  test_check_models.py  test_check_pipeline.py  test_check_report.py  test_check_retrieval.py  test_check_web.py  test_config.py  test_fakes.py  test_gather.py  test_highlight.py  test_interfaces.py  test_llm.py  test_manuscript.py  test_manuscript_layout.py  test_models.py  test_resolve.py  test_verify_citations.py
